# se_task_private

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: ci.yml
dot_product/: CMakeLists.txt  gen_num.cpp  gen_num.h  main.cpp  test_dot_product.cpp  test_gen_num.cpp
dot_product_docker/: Dockerfile
fenics_docker/: Dockerfile
fenicsx/: fenicsx_python.py  main.cpp  poisson.py
pytorch/: introduction_sciml_pytorch.py  introduction_sciml_pytorch_distributed.py
pytorch/sciml_modules/: dataset.py  neural_net.py  partitioned_dataset.py  test_unit.py  test_unit_parallel.py  train_validate.py  train_validate_distributed.py  wrappers.py
pytorch_docker/: Dockerfile
